--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -8,10 +8,10 @@
 
 <ion-content>
   <ion-list>
-    <ion-list-header>Follow us on Twitter</ion-list-header>
-    <ion-item>
-      <ion-icon name="ionic" item-left></ion-icon>
-      @ionicframework
+    <ion-list-header>Users</ion-list-header>
+    <ion-item *ngFor="let user of users | async">
+      <ion-icon name="mail" item-left></ion-icon>
+      {{ user.email }}
     </ion-item>
   </ion-list>
 </ion-content>
