--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -9,10 +9,10 @@
 <ion-content>
   <ion-list>
     <ion-list-header>Users</ion-list-header>
-    <ion-item *ngFor="let user of users | async">
+    <button ion-item *ngFor="let user of users | async" (click)="presentProfileModal(user.uid)">
       <ion-icon name="person" item-left></ion-icon>
       <h2>{{ user.name }}</h2>
-      <p>{{ user.bio }}</p>
-    </ion-item>
+      <p>{{ user.skills.join(", ") }}</p>
+    </button>
   </ion-list>
 </ion-content>
