--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -21,6 +21,14 @@
   </div>
   <div *ngIf="isLoggedIn()">
     <ion-list>
+      <button ion-item>
+        <ion-icon *ngIf="!((userRef | async)?.imageUrl && ((userRef | async)?.imageUrl != ''))" name="person" item-left></ion-icon>
+        <ion-avatar *ngIf="(userRef | async)?.imageUrl && ((userRef | async)?.imageUrl != '')" item-start>
+          <img [src]="(userRef | async)?.imageUrl">
+        </ion-avatar>
+        <h2>{{ (userRef | async)?.name }}</h2>
+        <p>{{ (userRef | async)?.email }}</p>
+      </button>
       <ion-item>
         <ion-label stacked>Name</ion-label>
         <ion-input type="text" [ngModel]='(userRef | async)?.name' (ngModelChange)="userRef.update({name: $event})"></ion-input>
