--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -6,37 +6,54 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content>
   <div swing-stack #myswing1 [stackConfig]="stackConfig" (throwoutleft)="voteUp(true)" (throwoutright)="voteUp(false)" id="card-stack">
     <ion-card #mycards1 swing-card *ngFor="let c of cards">
-      <ion-item *ngIf="c.picture">
+      <ion-item>
+        <ion-icon *ngIf="!(c.imageUrl && (c.imageUrl != ''))" name="person" item-left></ion-icon>
         <ion-avatar item-left>
-          <img *ngIf="c.picture"[src]="c.picture.medium">
+          <img *ngIf="c.imageUrl && (c.imageUrl != '')" [src]="c.imageUrl">
         </ion-avatar>
-        <h2>{{ c.name.first }} {{ c.name.last}}</h2>
+        <h2>{{ c.name }}</h2>
         <p>{{ c.email }}</p>
       </ion-item>
 
-      <ion-card-content *ngIf="c.location">
-        From: {{ c.location.city }}, {{ c.location.postcode }}<br>
-        Phone: {{ c.phone }}
+      <ion-card-content id="bio" *ngIf="c.bio">
+        {{ c.bio }}
       </ion-card-content>
-
-      <ion-row *ngIf="c.name">
-        <ion-col>
-          <button ion-button clear small icon-left color="primary" (click)="voteUp(true)">
-            <ion-icon name="thumbs-up"></ion-icon>
-            Yes
-          </button>
-        </ion-col>
-        <ion-col>
-          <button ion-button clear small icon-left color="primary" (click)="voteUp(false)">
-            <ion-icon name="thumbs-down"></ion-icon>
-            No
-          </button>
-        </ion-col>
-      </ion-row>
+      <ion-card-content id="skills">
+        <p>
+          <span *ngFor="let skill of c?.skills">{{ skill }}</span>
+        </p>
+      </ion-card-content>
     </ion-card>
+    <ion-row *ngIf="isLoggedIn()">
+      <ion-col>
+        <button ion-button clear large icon-left color="danger" (click)="voteUp(false)">
+          <ion-icon name="thumbs-down"></ion-icon>
+          No
+        </button>
+      </ion-col>
+      <ion-col>
+        <button ion-button clear large icon-right color="secondary" (click)="voteUp(true)">
+          Yes
+          <ion-icon name="thumbs-up"></ion-icon>
+        </button>
+      </ion-col>
+    </ion-row>
+    <ion-row *ngIf="!isLoggedIn()">
+      <ion-col>
+        <button ion-button clear large icon-left color="danger" (click)="promptLogin()">
+          <ion-icon name="thumbs-down"></ion-icon>
+          No
+        </button>
+      </ion-col>
+      <ion-col>
+        <button ion-button clear large icon-right color="secondary" (click)="promptLogin()">
+          Yes
+          <ion-icon name="thumbs-up"></ion-icon>
+        </button>
+      </ion-col>
+    </ion-row>
   </div>
-  <p style="text-align: center; width: 100%;">{{ recentCard }}</p>
 </ion-content>
