--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -7,7 +7,7 @@
 </ion-header>
 
 <ion-content>
-  <div swing-stack #myswing1 [stackConfig]="stackConfig" (throwoutleft)="voteUp(true)" (throwoutright)="voteUp(false)" id="card-stack">
+  <div swing-stack #myswing1 [stackConfig]="stackConfig" (throwoutleft)="voteUp(false)" (throwoutright)="voteUp(true)" id="card-stack">
     <ion-card #mycards1 swing-card *ngFor="let c of cards">
       <ion-item>
         <ion-icon *ngIf="!(c.imageUrl && (c.imageUrl != ''))" name="person" item-left></ion-icon>
