--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -41,7 +41,7 @@
         </button>
       </ion-col>
     </ion-row>
-    <ion-row *ngIf="!isLoggedIn()">
+    <ion-row *ngIf="!isLoggedIn() && cards?.length > 0">
       <ion-col>
         <button ion-button clear large icon-left color="danger" (click)="promptLogin()">
           <ion-icon name="thumbs-down"></ion-icon>
@@ -57,6 +57,9 @@
     </ion-row>
     <div *ngIf="isLoggedIn() && cards?.length <= 0" padding text-center>
       <h4>No more users near you ...</h4>
+    </div>
+    <div *ngIf="!isLoggedIn() && cards?.length <= 0" padding text-center>
+      <h4>Log in to match with users.</h4>
     </div>
   </div>
 </ion-content>
