--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -26,7 +26,7 @@
           <!--<ion-icon name="close-circle-outline"></ion-icon>-->
         <!--</button>-->
         <button ion-button item-end icon-only clear color="secondary"
-                *ngIf="user?.matches[currentUserSnap.uid]?.likes && currentUserSnap.matches[user.uid]?.likes">
+                *ngIf="user?.matches && user?.matches[currentUserSnap?.uid]?.likes && currentUserSnap?.matches && currentUserSnap?.matches[user?.uid]?.likes">
           <ion-icon name="checkmark-circle"></ion-icon>
         </button>
       </button>
