--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,26 +9,26 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <div *ngIf="!isLoggedIn()">
+<ion-content>
+  <div *ngIf="!isLoggedIn()" padding>
     <h4>You are not Logged In ...</h4>
-    <button ion-button block (click)="presentLoginModal()">
+    <button ion-button block outline (click)="presentLoginModal()">
       Have an account? Log In.
     </button>
-    <button ion-button block (click)="presentSignUpModal()">
+    <button ion-button block outline (click)="presentSignUpModal()">
       Need an account? Sign Up!
     </button>
   </div>
   <div *ngIf="isLoggedIn()">
     <ion-list>
-      <button ion-item>
+      <ion-item>
         <ion-icon *ngIf="!((userRef | async)?.imageUrl && ((userRef | async)?.imageUrl != ''))" name="person" item-left></ion-icon>
         <ion-avatar *ngIf="(userRef | async)?.imageUrl && ((userRef | async)?.imageUrl != '')" item-start>
           <img [src]="(userRef | async)?.imageUrl">
         </ion-avatar>
         <h2>{{ (userRef | async)?.name }}</h2>
         <p>{{ (userRef | async)?.email }}</p>
-      </button>
+      </ion-item>
       <ion-item>
         <ion-label stacked>Name</ion-label>
         <ion-input type="text" [ngModel]='(userRef | async)?.name' (ngModelChange)="userRef.update({name: $event})"></ion-input>
