--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,5 @@
 <ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Contact" tabIcon="contacts"></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="Profile" tabIcon="person"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="align" tabIcon="compass"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Browse" tabIcon="people"></ion-tab>
 </ion-tabs>
