--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,7 @@
 <ion-tabs>
   <ion-tab [root]="tab1Root" tabTitle="Profile" tabIcon="person"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="align" tabIcon="compass"></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="Browse" tabIcon="people"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="align" tabIcon="compass"></ion-tab>
+  <ion-tab [root]="tab5Root" tabTitle="Startups" tabIcon="bulb"></ion-tab>
+  <ion-tab [root]="tab4Root" tabTitle="Events" tabIcon="calendar"></ion-tab>
 </ion-tabs>
