--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,4 @@
-<ion-tabs>
+<ion-tabs [selectedIndex]="2">
   <ion-tab [root]="tab1Root" tabTitle="Profile" tabIcon="person"></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="Browse" tabIcon="people"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="align" tabIcon="compass"></ion-tab>
