--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -9,14 +9,15 @@
 <ion-content>
   <div swing-stack #myswing1 [stackConfig]="stackConfig" (throwoutleft)="voteUp(false)" (throwoutright)="voteUp(true)" id="card-stack">
     <ion-card #mycards1 swing-card *ngFor="let c of cards">
-      <ion-item>
+      <button ion-item detail-none (click)="shareProfile(c)">
         <ion-icon *ngIf="!(c.imageUrl && (c.imageUrl != ''))" name="person" item-left></ion-icon>
         <ion-avatar item-left>
           <img *ngIf="c.imageUrl && (c.imageUrl != '')" [src]="c.imageUrl">
         </ion-avatar>
         <h2>{{ c.name }}</h2>
         <p>{{ c.email }}</p>
-      </ion-item>
+        <ion-icon name="share" item-end color="primary"></ion-icon>
+      </button>
 
       <ion-card-content id="bio" *ngIf="c.bio">
         {{ c.bio }}
